# 171-Kask-NewCPPCode

./: readme.md
metrics/: readme.md
metrics/Graphing/: graphing.py
metrics/Graphing/csv/: original_times.csv  refactored_times.csv
metrics/Simple-MCTS/: readme.md
metrics/Simple-MCTS/For-Original/: StudentAI.cpp  StudentAI.h
metrics/Simple-MCTS/For-Refactored/: StudentAI.cpp
src/Original/: CMakeLists.txt
src/Original/include/: AI.h
src/Original/src/: GameLogic.cpp
src/Refactored/include/: AI.h  Board.h  Checker.h  GameLogic.h  ManualAI.h  Move.h  StudentAI.h  Utils.h
src/Refactored/src/: Board.cpp  Checker.cpp  GameLogic.cpp  ManualAI.cpp  Move.cpp  StudentAI.cpp  Utils.cpp  main.cpp
